--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -50,19 +50,19 @@
 	}
 
 	h1 {
-		@apply text-5xl;
-	}
-	h2 {
 		@apply text-4xl;
 	}
-	h3 {
+	h2 {
 		@apply text-3xl;
 	}
-	h4 {
+	h3 {
 		@apply text-2xl;
 	}
-	h5 {
+	h4 {
 		@apply text-xl;
+	}
+	h5 {
+		@apply text-lg;
 	}
 	h6 {
 		@apply text-lg italic;
