--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -77,6 +77,10 @@ body {
 	@apply font-body text-surface-50 bg-surface-950;
 }
 
+html {
+	@apply scroll-pt-10 scroll-smooth;
+}
+
 @font-face {
 	font-family: 'Source Serif 4';
 	src: url('$lib/fonts/SourceSerif4-Regular.woff2') format('woff2');
